fixed alignment and more button

--- a/styles/MyCss.css
+++ b/styles/MyCss.css
@@ -186,7 +186,7 @@
     z-index: -1;
     top: 0vh;
     left: 0;
-    min-height: 100vh;
+    min-height: calc(100vh - calc(100vh - 100%));
     /* min-height: -webkit-fill-available; */
     background-color: rgba(36, 115, 255, 1);
 }
@@ -315,6 +315,22 @@ body {
     font-weight: 300;
     font-family: Edumaxisharp, sans-serif;
 }
+
+.myTextLink {
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: Peakrounded, sans-serif;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    text-align: left;
+    line-height: 16px;
+}
+
+.myContent {
+    margin-left: 16px;
+}
 @media screen and (max-width: 767px) {
     .myMenu {
         /* border: red solid 5px; */
@@ -327,7 +343,7 @@ body {
         background-color: rgba(36, 115, 255, 1);
         width: 98vw;
         height: 100%;
-        left: 75%;
+        left: 50%;
         transform: translate(-50%);
     }
 }
